[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grlp"]

[project]
name = "GRLP"
dynamic = ["version"]
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "networkx",
]
requires-python = ">=3.09"
authors = [
  { name="Andrew D. Wickert", email="awickert@umn.edu" },
  { name="Fergus McNab", email="fergus.mcnab@gfz.de" },
  { name="Eric A Barefoot", email="eric.barefoot@ucr.edu" },
]
description = "Evolves gravel-bed river long profiles"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
  "earth science",
  "geomorphology",
  "fluvial",
  "rivers",
  "numerical modeling",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[tool.setuptools.dynamic]
version = {attr = "grlp._version.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: marks tests that run full numerical time-integrations (deselect with '-m \"not slow\"')",
]

[project.urls]
Homepage = "https://csdms.colorado.edu/wiki/Model:GRLP"
Repository = "https://github.com/MNiMORPH/GRLP"
Documentation = "https://grlp.readthedocs.io"
Issues = "https://github.com/MNiMORPH/GRLP/issues"

